projects/vb6parse/snapshots/parsers/cst/library/interaction/doevents/doevents_select_case.snap
---
source: projects/vb6parse/tests/library/interaction/doevents.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SelectCaseStatement
      children:
        - kind: SelectKeyword
          text: Select
        - kind: Whitespace
          text: " "
        - kind: CaseKeyword
          text: Case
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: StepKeyword
              text: step
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "    "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "1"
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: Whitespace
                  text: "        "
                - kind: AssignmentStatement
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: x
                    - kind: Whitespace
                      text: " "
                    - kind: EqualityOperator
                      text: "="
                    - kind: Whitespace
                      text: " "
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: DoEvents
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children: []
                        - kind: RightParenthesis
                          text: )
                    - kind: Newline
                      text: "\n"
                - kind: Whitespace
                  text: "        "
                - kind: CallStatement
                  children:
                    - kind: Identifier
                      text: ProcessStep1
                    - kind: Newline
                      text: "\n"
                - kind: Whitespace
                  text: "    "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "2"
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: Whitespace
                  text: "        "
                - kind: AssignmentStatement
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: y
                    - kind: Whitespace
                      text: " "
                    - kind: EqualityOperator
                      text: "="
                    - kind: Whitespace
                      text: " "
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: DoEvents
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children: []
                        - kind: RightParenthesis
                          text: )
                    - kind: Newline
                      text: "\n"
                - kind: Whitespace
                  text: "        "
                - kind: CallStatement
                  children:
                    - kind: Identifier
                      text: ProcessStep2
                    - kind: Newline
                      text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SelectKeyword
          text: Select
        - kind: Newline
          text: "\n"
